--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@firebase/app": "0.1.10",
     "@firebase/app-types": "0.1.2",
+    "@ionic-native/barcode-scanner": "^4.20.0",
     "@ionic-native/camera": "^4.3.3",
     "@ionic-native/core": "4.12.2",
     "@ionic-native/device-motion": "^4.15.0",
     "@ionic-native/native-audio": "^4.14.0",
-    "@ionic-native/qr-scanner": "^4.14.0",
     "@ionic-native/shake": "^4.15.0",
     "@ionic-native/splash-screen": "4.12.2",
     "@ionic-native/status-bar": "4.12.2",
@@ -42,7 +42,6 @@
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.1",
     "cordova-plugin-nativeaudio": "^3.0.9",
-    "cordova-plugin-qrscanner": "^2.6.2",
     "cordova-plugin-shake": "^0.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -50,6 +49,7 @@
     "firebase": "4.6.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "phonegap-plugin-barcodescanner": "8.0.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -69,11 +69,13 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-qrscanner": {},
       "cordova-plugin-nativeaudio": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-shake": {},
-      "cordova-plugin-device-motion": {}
+      "cordova-plugin-device-motion": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
