--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.3.0"
+    "firebase-functions": "^2.3.0",
+    "nodemailer": "^6.2.1"
   },
   "devDependencies": {
     "typescript": "^3.2.2"
