--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/camera": "^4.3.3",
     "@ionic-native/core": "4.12.2",
     "@ionic-native/device-motion": "^4.15.0",
+    "@ionic-native/email-composer": "^4.20.0",
     "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/native-audio": "^4.14.0",
     "@ionic-native/shake": "^4.15.0",
@@ -40,6 +41,7 @@
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-email-composer": "0.9.2",
     "cordova-plugin-firebase": "git+https://github.com/dpa99c/cordova-plugin-firebase.git#GH-1057-April-05-android-build-issue",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.1",
