Cambios: Pedido/Producto con Set. Alta de pedido con id, alta de producto con id. Boton de prueba con datos de test en Pages-pedido-alta.ts.  agregado de plugin de email composer.

--- a/package.json
+++ b/package.json
@@ -82,7 +82,10 @@
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-email-composer": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
