--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic-native/shake": "^4.15.0",
     "@ionic-native/splash-screen": "4.12.2",
     "@ionic-native/status-bar": "4.12.2",
+    "@ionic-native/vibration": "^4.20.0",
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "2.0.0",
@@ -48,6 +49,7 @@
     "cordova-plugin-shake": "^0.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-vibration": "3.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "4.6.0",
     "firebase-admin": "^8.0.0",
@@ -83,7 +85,8 @@
       },
       "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "android"
