--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "@ngx-translate/http-loader": "2.0.0",
     "angularfire2": "5.0.0-rc.3",
     "chart.js": "^2.7.2",
-    "cordova-android": "7.1.4",
+    "cordova-android": "8.0.0",
+    "cordova-plugin-androidx": "1.0.2",
+    "cordova-plugin-androidx-adapter": "1.1.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-email-composer": "0.9.2",
+    "cordova-plugin-firebase": "git+https://github.com/dpa99c/cordova-plugin-firebase.git#GH-1057-April-05-android-build-issue",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.1",
     "cordova-plugin-nativeaudio": "^3.0.9",
@@ -86,7 +89,10 @@
       "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "android"
