--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "firebase-functions": "^2.3.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "json-2-csv": "^3.5.4",
     "phonegap-plugin-barcodescanner": "^8.0.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
