--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/email-composer": "^4.20.0",
     "@ionic-native/file": "^4.20.0",
     "@ionic-native/file-chooser": "^4.20.0",
+    "@ionic-native/file-path": "^4.20.0",
     "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/native-audio": "^4.14.0",
     "@ionic-native/shake": "^4.15.0",
@@ -49,6 +50,7 @@
     "cordova-plugin-email-composer": "0.9.2",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-filechooser": "1.2.0",
+    "cordova-plugin-filepath": "1.5.5",
     "cordova-plugin-firebase": "git+https://github.com/dpa99c/cordova-plugin-firebase.git#GH-1057-April-05-android-build-issue",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.1",
@@ -99,7 +101,8 @@
       "cordova-plugin-androidx-adapter": {},
       "cordova-plugin-firebase": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-filechooser": {}
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-filepath": {}
     },
     "platforms": [
       "android"
